# function-calling-eval

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py
data/: eval_alpha.jsonl  eval_final_valid_100.jsonl  first_50_cleaned.json  function_calling_eval.jsonl  function_calling_eval_complex.jsonl  function_calling_eval_easy.jsonl  function_calling_eval_hard.jsonl  function_calling_eval_hard_3_functions_hard_142.jsonl  function_calling_eval_hard_3_functions_hard_38.jsonl  function_calling_eval_harder.jsonl  function_calling_eval_p1.jsonl  function_calling_eval_p2.jsonl  function_calling_eval_simple.jsonl  last_50_cleaned.jsonl  pythonic.jsonl  verified_simple.jsonl
data_gen/resources/: pre_curriculum.csv
data_gen/utils/: read_csv.py
eval/: engine.py  evaluate.py  model.py  schemas.py  settings.py  util.py
eval/json_mode/: __init__.py  engine.py  eval.py  system_prompt.txt
eval/python/: function_calling_eval.py
eval/pythonic/: __init__.py  engine.py  eval.py  function_calling_eval.py  system_prompt.txt
